[package]
name = "bobry_w_locie"
version = "0.1.0"
edition = "2021"

#[workspace]
#members = ["crates/*"]

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug", "serialize"] }
crossbeam-channel = "0.5.13"
dotenv = "0.15.0"
rand = "0.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
serde_derive = "1.0.215"
log = "0.4"
env_logger = "0.11.6"
